--- a/DeskCap/DeskCap.csproj
+++ b/DeskCap/DeskCap.csproj
@@ -90,6 +90,7 @@
     <None Include="Resources\favicon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Resources\logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
