--- a/DeskCap/DeskCap.csproj
+++ b/DeskCap/DeskCap.csproj
@@ -51,6 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmCaptureImage.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCaptureImage.Designer.cs">
+      <DependentUpon>frmCaptureImage.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +65,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmCaptureImage.resx">
+      <DependentUpon>frmCaptureImage.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmSettings.resx">
       <DependentUpon>frmSettings.cs</DependentUpon>
       <SubType>Designer</SubType>
