--- a/DeskCap/DeskCap.csproj
+++ b/DeskCap/DeskCap.csproj
@@ -57,6 +57,12 @@
     <Compile Include="frmCaptureImage.Designer.cs">
       <DependentUpon>frmCaptureImage.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmFakeBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmFakeBox.Designer.cs">
+      <DependentUpon>frmFakeBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmSettings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -67,6 +73,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmCaptureImage.resx">
       <DependentUpon>frmCaptureImage.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmFakeBox.resx">
+      <DependentUpon>frmFakeBox.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="frmSettings.resx">
