--- a/DeskCap/DeskCap.csproj
+++ b/DeskCap/DeskCap.csproj
@@ -69,6 +69,7 @@
     <Compile Include="frmSettings.Designer.cs">
       <DependentUpon>frmSettings.cs</DependentUpon>
     </Compile>
+    <Compile Include="Hotkey.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmCaptureImage.resx">
